# tip-toi-reveng

./: .gitignore  .travis-setup-linux.sh  .travis-setup-windows.sh  .travis.yml  Building.md  CNAME  Changelog.md  Debug.yaml  Dockerfile  GME-Format.md  LICENSE  Makefile  Procfile  README.md  Table-Notes.md  Video-Tutorial-create-and-print-games  _config.yml  buecher.txt  cabal.project  cabal.project.freeze  codes_bauernhof.txt  decode.hs  decode.m  decode_errors.txt  default.nix  example-video own oid-print on pictures.txt  example.yaml  ferkel.txt  fetch-contrib.sh  findoggpos.hs  findxor.hs  first_block.txt  flake.nix  gameanalyse.c  gen-windows-release.sh  generate-oid-table.sh  getandsaveaudiofiles.m  getaudiofile.m  getfiles.sh  getjumptable.m  (+17 more)
.github/workflows/: build.yml  emulator-tests.yml
Audio/: README.md  Readme.md  hex.7z  numbers.7z  zahlen.7z
Audio/digits/: .gitignore  build.sh
Audio/numbers/: build.sh
Audio/numbers/source/: english-0.flac  english-2.flac  english-4.flac  english-6.flac  english-7.flac  english-8.flac  english-9.flac
Audio/source/: LICENSE.md  blob.flac  english-3.flac  english-5.flac  english_1.flac
_includes/: index.md  title
_layouts/: default.html
book/: .readthedocs.yaml  Makefile  conf.py  erste-schritte.md  erste-schritte.rst  galerie.md  gallerie.md  genindex.rst  index.rst  installation.md  installation.rst  konzepte.rst  make.bat  tipps-und-tricks.md  tipps-und-tricks.rst  tttool-referenz.md  tttool-referenz.rst  vorwort.md  vorwort.rst  yaml-referenz.md  yaml-referenz.rst
contrib/: README.txt
css/: solo.css  tttool.css
example/: README
matlab/: decodejumptableline.m  decryptaudiofile.m  getaudiotable.m  printjumptablelines.m
nix/: HPDF.nix  conduit.nix  default.nix  iohk-nix.json  lib.nix  macdylibbundler.nix  new.nix  pkgs.nix  plan.nix  project.nix  release.nix  source-by-regex.nix  sources.json  tttool.nix
nix-static/: default.nix  project.nix
nix-static/nixpkgs/: github.json
nix/nixpkgs/: github.json
perl-tools/: TTT-generatePDF.pl
playmus/: README.md  playmus.c
prism-syntax-highlighter/: README.md  example.html  prism-yamltttool.css  prism-yamltttool.js  prism.css  prism.js  template.html
scripts/: .gitignore  download.pl  update.sh
src/: BakedVector.hs  BinaryPath.hs  Commands.hs  Constants.hs  Cypher.hs  GMEParser.hs  GMERun.hs  GMEWriter.hs  KnownCodes.hs  Language.hs  Lint.hs  OidCode.hs  OidTable.hs  OidTableSVG.hs  OneLineParser.hs  PlaySound.hs  PrettyPrint.hs  RangeParser.hs  TextToSpeech.hs  TipToiYaml.hs  TipToiYamlAux.hs  Types.hs  Utils.hs  tttool.hs
taschenrechner/: taschenrechner.yaml
templates/: Mein_Wörter_Bilderbuch_Tiere.yaml  README.md  Spielfiguren3.yaml  WWW_Bauernhof.yaml  WWW_Weltatlas.yaml
testsuite/: .gitignore  README.md  download.sh  gme-files-all.txt  gme-files-test.txt  list-gmes.sh  run.sh  test.sh
testsuite/emulator-tests/: .gitignore  README.md  conftest.py  pyproject.toml  test_deferred.py  test_deferred.yaml  test_jump.py  test_jump.yaml  test_minimal.py  test_minimal.yaml  test_timer.py  test_timer.yaml
testsuite/emulator-tests/infra/: __init__.py  assembler.py  audio_check.py  gme_patch.py  media.py
testsuite/expected/: example.info.txt  example.rewritten.gme  example.rexport.yaml  help-assemble.txt  help-binaries.txt  help-explain.txt  help-export.txt  help-games.txt  help-holes.txt  help-info.txt  help-lint.txt  help-media.txt  help-oid-code.txt  help-oid-codes.txt  help-oid-table.txt  help-play.txt  help-rewrite.txt  help-script.txt  help-scripts.txt  help-segment.txt  help-segments.txt  help-set-language.txt  help-set-product-id.txt  help.txt
testsuite/expected/downloaded/: Alle meine Tiere.gme.info.txt  Alle meine Tiere.gme.lint.txt  Alle meine Tiere.gme.yaml.md5sum  Dein Koerper und Du.gme.info.txt  Dein Koerper und Du.gme.yaml.md5sum  Duell-der-Superquizzer.gme.info.txt  Duell-der-Superquizzer.gme.lint.txt  Duell-der-Superquizzer.gme.yaml.md5sum  Expedition Wissen - Aegypten.gme.info.txt  Expedition Wissen - Aegypten.gme.yaml.md5sum  Leserabe Drache.gme.info.txt  Leserabe Drache.gme.yaml.md5sum  Pocket Wissen - Baustellenfahrzeuge.gme.info.txt  Pocket Wissen - Baustellenfahrzeuge.gme.lint.txt  Pocket Wissen - Baustellenfahrzeuge.gme.yaml.md5sum  Pocketwissen_Feuerwehr.gme.info.txt  Pocketwissen_Feuerwehr.gme.yaml.md5sum  Puzzle Ritterburg.gme.info.txt  Puzzle Ritterburg.gme.lint.txt  Puzzle Ritterburg.gme.yaml.md5sum  Sprichst_Du_Englisch.gme.info.txt  Sprichst_Du_Englisch.gme.yaml.md5sum  WWW Ritter.gme.info.txt  WWW Ritter.gme.yaml.md5sum  WWW Weltatlas.gme.info.txt  WWW Weltatlas.gme.yaml.md5sum  WissenQuizzen1.gme.info.txt  WissenQuizzen1.gme.yaml.md5sum
transcript/: WWW_Bauernhof.csv  WWW_Bauernhof_Games.txt
voicetool/: README.txt  gen_tts_files.sh  voicetool.py  wavs.txt
wip/: Firmware.md  Hardware.md  Tiptoi code.xls  bytecode2oid.xls  games.txt
