name:                tttool
version:             1.6.1.3
synopsis:            Working with files for the Tiptoi® pen
description:         The Ravensburger Tiptoi® pen is programmed via special
                     files. Their file format has been reverse engineered; this
                     is a tool to analyse and create such files.
category:            Reverse Engineering
homepage:            https://github.com/entropia/tip-toi-reveng
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2013-2015 Joachim Breitner
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag old-locale
 description:
   If false then depend on time >= 1.5.
   .
   If true then depend on time < 1.5 together with old-locale.
 default: False

Flag bytestring_has_builder
  default: True

executable tttool
  main-is:             tttool.hs
  other-modules:
    BakedVector,
    Constants,
    Cypher,
    GMEParser,
    GMERun,
    GMEWriter,
    Lint,
    Language,
    OidCode,
    OidTable,
    OneLineParser,
    PlaySound,
    PrettyPrint,
    RangeParser,
    TipToiYaml,
    TipToiYamlAux,
    TextToSpeech,
    KnownCodes,
    Types,
    Commands,
    Utils

  build-depends:
    base        >= 4.5 && < 4.10,
    binary      >= 0.5 && < 0.9,
    containers  == 0.4.*   ||  == 0.5.*,
    directory   == 1.2.*,
    executable-path == 0.0.*,
    filepath    == 1.3.*   ||  == 1.4.*,
    template-haskell >= 2.7 && < 2.12,

    JuicyPixels >= 3.2.5   &&   < 3.3,
    aeson       >= 0.7     &&   < 1.1,
    hashable    == 1.2.*,
    haskeline   == 0.7.*,
    mtl         == 2.1.*   ||  == 2.2.*,
    parsec      == 3.1.*,
    process     >= 1.1      &&   < 1.5,
    random      >= 1.0      &&   < 1.2,
    vector      >= 0.10     &&   < 0.12,
    yaml        == 0.8.*,
    HPDF        >= 1.4.10   && < 1.5,
    split       == 0.2.*,
    optparse-applicative == 0.13.*,
    spool       == 0.1.*,
    zlib        >= 0.5      && < 0.7,
    natural-sort >= 0.1     && < 0.2

  if impl(ghc < 7.5)
    build-depends: ghc-prim

  ghc-options: -fcontext-stack=42

  if flag(old-locale)
    build-depends: time == 1.4.*, old-locale
  else
    build-depends: time >= 1.5 && < 1.7

  if flag(bytestring_has_builder)
    build-depends:
      bytestring >= 0.10.4 && < 0.11
  else
    build-depends:
      bytestring >= 0.10 && < 0.10.4,
      bytestring-builder >= 0.10.4.1.1


  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -fwarn-unused-imports
    -fwarn-incomplete-patterns
    -rtsopts
    -with-rtsopts=-K100M

source-repository head
  type:     git
  location: https://github.com/entropia/tip-toi-reveng
