name:                tttool
version:             1.8.1
synopsis:            Working with files for the Tiptoi® pen
description:         The Ravensburger Tiptoi® pen is programmed via special
                     files. Their file format has been reverse engineered; this
                     is a tool to analyse and create such files.
                     .
                     For more user-facing documentation, see
                     <http://tttool.entropia.de/> (in German).
category:            Reverse Engineering
homepage:            https://github.com/entropia/tip-toi-reveng
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2013-2019 Joachim Breitner
build-type:          Simple
extra-source-files:  README.md Changelog.md
cabal-version:       >=1.10

executable tttool
  main-is:             tttool.hs
  other-modules:
    BakedVector,
    Constants,
    Cypher,
    GMEParser,
    GMERun,
    GMEWriter,
    Lint,
    Language,
    OidCode,
    OidTable,
    OidTableSVG,
    OneLineParser,
    PlaySound,
    PrettyPrint,
    RangeParser,
    TipToiYaml,
    TipToiYamlAux,
    TextToSpeech,
    KnownCodes,
    Types,
    Commands,
    Utils

  build-depends: aeson >= 0.7 && < 1.5
  build-depends: base >= 4.11 && < 4.13
  build-depends: base64-bytestring == 1.0.*
  build-depends: binary >= 0.5 && < 0.9
  build-depends: blaze-svg == 0.3.*
  build-depends: bytestring >= 0.10.4 && < 0.11
  build-depends: containers >= 0.4 && <0.7
  build-depends: directory >= 1.2 && < 1.4
  build-depends: executable-path == 0.0.*
  build-depends: filepath == 1.3.* || == 1.4.*
  build-depends: hashable == 1.2.*
  build-depends: haskeline == 0.7.*
  build-depends: HPDF >= 1.4.10 && < 1.5
  build-depends: JuicyPixels >= 3.2.5 && < 3.4
  build-depends: mtl == 2.2.*
  build-depends: natural-sort >= 0.1 && < 0.2
  build-depends: optparse-applicative >= 0.13 && < 0.15
  build-depends: parsec == 3.1.*
  build-depends: process >= 1.1 && < 1.7
  build-depends: random >= 1.0 && < 1.2
  build-depends: split == 0.2.*
  build-depends: spool == 0.1.*
  build-depends: template-haskell >= 2.7 && < 2.15
  build-depends: text == 1.2.*
  build-depends: time >= 1.5 && < 1.9
  build-depends: vector >= 0.10 && < 0.13
  build-depends: yaml >= 0.8 && < 0.12
  build-depends: zlib >= 0.5 && < 0.7

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -fwarn-unused-imports
    -fwarn-incomplete-patterns
    -rtsopts
    -with-rtsopts=-K100M

source-repository head
  type:     git
  location: https://github.com/entropia/tip-toi-reveng
